[tool.poetry]
name = "stablehousematching"
version = "0.1.0"
description = ""
authors = ["zlxlty <lus2@carleton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.3"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
